[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Scripts/PlayerScripts/EntityScripts/DamageAreaBlueEntity.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Items/skull_item.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.27009, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 40.0
scale_curve = SubResource( 4 )
color = Color( 0.827451, 0.615686, 0.211765, 1 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.904545 ), 0.0, 0.0, 0, 0, Vector2( 0.521212, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -5.93181, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.7
scale_curve = SubResource( 6 )
color = Color( 0.505882, 0.223529, 0.223529, 1 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 60.0
tangential_accel_random = 0.28
scale = 0.3

[sub_resource type="Curve" id=12]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, -50 ), 0.0, 0.0, 0, 0, Vector2( 0.206061, 33.6364 ), 0.0, 0.0, 0, 0, Vector2( 0.454545, -50 ), 0.0, 0.0, 0, 0, Vector2( 0.630303, 48.1818 ), 0.0, 0.0, 0, 0, Vector2( 0.836364, -57.2727 ), 0.0, 0.0, 0, 0, Vector2( 1, 40.9091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.509091 ), -1.07143, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
trail_divisor = 10
trail_size_modifier = SubResource( 10 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0
tangential_accel_curve = SubResource( 13 )
color = Color( 0, 0.4, 0.388235, 1 )
hue_variation = 1.0
hue_variation_random = 0.05

[node name="DamageAreaBlueEntity" type="Area2D"]
scale = Vector2( 2, 2 )
collision_mask = 128
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
amount = 90
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )

[node name="Particles2D3" type="Particles2D" parent="."]
visible = false
amount = 9
one_shot = true
explosiveness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="Particles2D4" type="Particles2D" parent="."]
emitting = false
amount = 80
lifetime = 1.5
one_shot = true
process_material = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
